DOMUI: Make content settings exception lists zippy (aka expandable/collapsable). Loosely based on http://codereview.chromium.org/3038006 by estade. BUG=57437 TEST=cool zippy exception lists in DOMUI content settings
Review URL: http://codereview.chromium.org/4191005

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@64998 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: e252416fbf759a0fd6aef925d1fdeb1180fea627

--- a/chrome/browser/resources/options/content_settings.css
+++ b/chrome/browser/resources/options/content_settings.css
@@ -6,9 +6,20 @@ found in the LICENSE file.
 
 .contentSettingsHeader {
    /* TODO(dhg): something nice. */
+  margin: 0px;
+  margin-bottom: 1em;
 }
 
-.exceptionsLink {
-  font-weight: bold;
-  cursor: pointer;
+.zippy div[mode=otr] {
+  display: none;
+}
+
+.zippy.show-otr div[mode=otr] {
+  display: block;
+  /* background reminiscent of an incognito window, but faded */
+  background: -webkit-gradient(linear,
+                               left top,
+                               left bottom,
+                               from(rgba(97, 122, 156, .25)),
+                               to(rgba(82, 108, 145, .25)));
 }
